# markdown-preview

./: .gitignore  .textlintrc.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  lsmcp.schema.json
.github/workflows/: build.yml  ci.yml  test.yml
crates/mp/: Cargo.toml
crates/mp-core/: Cargo.toml
crates/mp-core/src/: finder.rs  html_entity.rs  lib.rs  parser.rs  theme.rs  utils.rs
crates/mp-core/src/theme/: adapter.rs  color.rs  style.rs  themes.rs  utils.rs
crates/mp-core/tests/: integration_test.rs
crates/mp-renderer/: Cargo.toml
crates/mp-renderer/src/: buffered_output.rs  builder.rs  formatting.rs  handlers.rs  io.rs  lib.rs  state.rs  styling.rs  table_builder.rs
crates/mp-renderer/tests/: cow_optimization_test.rs
crates/mp-stdout/: Cargo.toml
crates/mp-stdout/src/: buffered_output.rs  builder.rs  config.rs  formatting.rs  handlers.rs  lib.rs  output.rs  state.rs  styling.rs  table_builder.rs  theme_adapter.rs
crates/mp-stdout/tests/: buffered_output_test.rs  cow_optimization_test.rs  vec_optimization_test.rs
crates/mp-tui/: Cargo.toml
crates/mp-tui/benches/: renderer_benchmark.rs
crates/mp-tui/src/: app.rs  file_tree.rs  lib.rs  preview.rs  renderer.rs  renderer_optimized.rs  status_bar.rs  theme_adapter.rs  tree_builder.rs  ui.rs  utils.rs  widgets.rs
crates/mp-tui/src/widgets/: file_tree.rs  preview.rs
crates/mp-tui/tests/: app_test.rs
crates/mp/src/: cli.rs  main.rs
crates/mp/tests/: workspace_integration_test.rs
examples/: EXAMPLE.md  EXAMPLE_ja.md
src/: cli.rs  finder.rs  html_entity.rs  lib.rs  main.rs  output.rs  parser.rs  renderer.rs  theme.rs  utils.rs
src/renderer/: base.rs  buffered_output.rs  builder.rs  config.rs  element_accessor.rs  formatting.rs  handlers.rs  io.rs  markdown.rs  state.rs  styling.rs  table_builder.rs  terminal.rs  tests.rs  traits.rs
tests/: buffered_output_test.rs  common.rs  commonmark_compliance.rs  data_driven_tests.rs  finder_integration_test.rs  integration_test.rs  test_helpers.rs  vec_optimization_test.rs
