[package]
name = "markdown-preview"
version = "0.1.0"
authors = ["kohdice <kohdice.biz@gmail.com>"]
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/kohdice/markdown-preview"

[[bin]]
name = "mp"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"
pulldown-cmark = "0.13.0"
terminal_size = "0.4"

[dev-dependencies]
regex = "1.11.1"
rstest = "0.26.1"
tempfile = "3.20.0"
