[workspace]
members = ["crates/*"]
resolver = "3"
default-members = ["crates/mp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["kohdice <kohdice.biz@gmail.com>"]
license = "MIT"
repository = "https://github.com/kohdice/markdown-preview"

[workspace.dependencies]
# Internal crates
mp-core = { version = "0.1.0", path = "crates/mp-core" }
mp-renderer = { version = "0.1.0", path = "crates/mp-renderer" }

# Common external dependencies
anyhow = "1.0.99"

# Test dependencies
regex = "1.11.1"
rstest = "0.23.0"
tempfile = "3.14.0"