[workspace]
members = ["crates/*"]
resolver = "3"
default-members = ["crates/mp"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
authors = ["kohdice <kohdice.biz@gmail.com>"]
license = "MIT"
repository = "https://github.com/kohdice/markdown-preview"

[workspace.dependencies]
# Internal crates
mp-core = { version = "0.1.0", path = "crates/mp-core" }
mp-stdout = { version = "0.1.0", path = "crates/mp-stdout" }
mp-tui = { version = "0.1.0", path = "crates/mp-tui" }

# Common external dependencies
anyhow = "1"
crossterm = "0.29"
pulldown-cmark = "0.13"

# Test dependencies
rstest = "0.26"
tempfile = "3.23"
