[package]
name = "mp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
ignore = "0.4.23"
aho-corasick = "1.1.3"

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }