[package]
name = "mp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }

aho-corasick = "1.1"
ignore = "0.4"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
