[package]
name = "mp-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mp-core = { workspace = true }
anyhow = { workspace = true }
colored = "3.0.0"
pulldown-cmark = "0.13.0"
terminal_size = "0.4.3"

[dev-dependencies]
rstest = { workspace = true }
