[package]
name = "mp-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mp-core = { workspace = true }

anyhow = { workspace = true }
pulldown-cmark = { workspace = true }

color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.29"
unicode-width = "0.2"
regex = "1.11"
