[package]
name = "mp-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mp-core = { workspace = true }

anyhow = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }

ratatui = "0.29"
regex = "1.11"
unicode-width = "0.2"
