[package]
name = "mp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mp"
path = "src/main.rs"

[dependencies]
mp-core = { workspace = true }
mp-renderer = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }