[package]
name = "mp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mp-core = { workspace = true }
mp-stdout = { workspace = true }
mp-tui = { workspace = true }

anyhow = { workspace = true }

clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
